# stereo_depth_estimation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
calibration/: stereo_calib.npz
rust-trainer/: Cargo.toml  README.md
rust-trainer/src/: config.rs  dataset.rs  main.rs  model.rs  preview.rs  train.rs
src/foundation_stereo_depth/: __init__.py  cache.py  dataset.py  eval_utils.py  model.py  monitor.py  train.py
src/live_camera/: __init__.py  calibrate.py  camera_setup.py  depth_live.py  depth_live_dl.py  list_cameras.py
tests/: test_dataset.py
