[project]
name = "foundation-stereo-depth"
version = "0.1.0"
description = "Train a stereo depth model on FoundationStereo with MLflow tracking"
readme = "README.md"
authors = [
    { name = "Geoffrey Irons", email = "geoff.irons@carboncrop.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[project.scripts]
foundation-stereo-depth = "foundation_stereo_depth.train:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
