[package]
name = "foundation-stereo-depth-rs"
version = "0.1.0"
edition = "2021"
description = "Rust/Candle training pipeline for FoundationStereo"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
cudnn = ["cuda", "candle-core/cudnn", "candle-nn/cudnn"]

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
candle-core = "0.9.1"
candle-nn = "0.9.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
indicatif = "0.17"
ndarray = "0.16"
ndarray-npy = "0.9"
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
